# audio-plugins

./: .gitignore  .gitmodules  Cargo.toml  README.md  phonitor3.jsfx  release.toml
.github/workflows/: release.yml
clap/__template/: Cargo.toml  justfile
clap/__template/src/: descriptor.rs  state.rs
clap/__template/src/extensions/: state.rs
clap/__template/src/gestures/: drag.rs
clap/__template/src/gui/app/: layout.rs
clap/__template/src/gui/app/components/: parameters.rs
clap/__template/src/parameters/: any.rs  blend.rs  mod.rs
clap/__template/src/processors/: render_audio.rs
clap/neural-amp-modeler/: Cargo.toml  build.rs  compile_commands.sh  justfile
clap/neural-amp-modeler/installer/: macos.sh  windows.nsi
clap/neural-amp-modeler/src/: descriptor.rs  factory.rs  helper.rs  host_notifier.rs  lib.rs  plugin.rs  preset_factory.rs  state.rs
clap/neural-amp-modeler/src/dsp/: dc_filter.rs  lowpass_filter.rs  mod.rs  nam.cpp  nam.h  nam.rs  resampler.h
clap/neural-amp-modeler/src/extensions/: audio_ports.rs  gui.rs  mod.rs  parameters.rs  preset_load.rs  state.rs
clap/neural-amp-modeler/src/gestures/: click.rs  drag.rs  mod.rs
clap/neural-amp-modeler/src/gui/: colors.rs  gpu.rs  helpers.rs  mod.rs  platform.rs  view.rs  widget.rs  window_handler.rs
clap/neural-amp-modeler/src/gui/app/: dispatcher.rs  layout.rs  state.rs
clap/neural-amp-modeler/src/gui/app/components/: header.rs  mod.rs  nam_model_selector.rs  parameters.rs
clap/neural-amp-modeler/src/parameters/: any.rs  blend.rs  input_gain.rs  mod.rs  output_gain.rs  tone.rs
clap/neural-amp-modeler/src/processors/: mod.rs  render_audio.rs  sync_main_to_audio.rs
clap/take-my-headphones/: Cargo.toml  README.md  build.rs  justfile
clap/take-my-headphones/installer/: windows.nsi
clap/take-my-headphones/src/: channel.rs  descriptor.rs  entry.rs  helper.rs  lib.rs  plugin.rs  preset_factory.rs  state.rs  version.rs
clap/take-my-headphones/src/dsp/: bs2b.rs  calibration.rs  itd.rs  mod.rs  pink_noise.rs
clap/take-my-headphones/src/extensions/: audio_ports.rs  gui.rs  mod.rs  parameters.rs  preset_load.rs  state.rs
clap/take-my-headphones/src/gestures/: click.rs  drag.rs
clap/take-my-headphones/src/gui/: gpu.rs  helpers.rs  mod.rs  view.rs  widget.rs  window_handler.rs
clap/take-my-headphones/src/gui/app/: layout.rs  mod.rs  state.rs
clap/take-my-headphones/src/gui/app/components/: dropdown.rs  head_view.rs  header.rs  main.rs  mod.rs  param_angle_knob.rs  param_bs2b_low_shelf_knob.rs  param_center_knob.rs  param_cutoff_knob.rs  param_gain_knob.rs  param_xfeed_knob.rs  param_xfeed_slope_knob.rs  parameters.rs  xfeed_curve.rs
clap/take-my-headphones/src/parameters/: angle.rs  any.rs  bs2b_low_shelf.rs  calibration_mode.rs  center.rs  cutoff.rs  feed.rs  gain.rs  lrswap.rs  mix.rs  mod.rs  phase.rs  solo.rs  xfeed.rs  xfeed_slope.rs
clap/take-my-headphones/src/processors/: handle_clap_event.rs  render_audio.rs
clap/take-my-headphones/src/utils/: copy_cstr.rs  decibel_conversion.rs  mod.rs  tuples.rs
clap/take-my-phones/: Cargo.toml  build.rs  justfile
clap/take-my-phones/src/: descriptor.rs  helper.rs  plugin.rs  preset_factory.rs  state.rs
clap/take-my-phones/src/dsp/: bs2b.rs  calibration.rs  mod.rs  pink_noise.rs
clap/take-my-phones/src/extensions/: audio_ports.rs  parameters.rs  preset_load.rs  state.rs
clap/take-my-phones/src/gestures/: click.rs  drag.rs
clap/take-my-phones/src/gui/: view.rs  widget.rs
clap/take-my-phones/src/gui/app/: layout.rs
clap/take-my-phones/src/gui/app/components/: header.rs  parameters.rs
clap/take-my-phones/src/parameters/: any.rs  calibration_mode.rs  cutoff.rs  mix.rs  mod.rs  xfeed.rs
clap/take-my-phones/src/processors/: render_audio.rs  sync_main_to_audio.rs
scripts/: take_my_phones.jsfx
