[workspace]
resolver = "3"
members = [
    "clap/__template",
    "clap/take-my-headphones"
]

[workspace.package]
authors = ["Cristian A. Enguídanos Nebot <cristian.enguidanos.nebot@gmail.com>"]
license = "GPL-3.0"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"       # optimiza para tamaño (no velocidad)
panic = "abort"       # elimina unwinding machinery (~10-15% del binary)
overflow-checks = false

[workspace.dependencies]
arc-swap = "1.9.1"
anyrender_vello = "0.8"
baseview = { git = "https://github.com/RustAudio/baseview" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz" }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", default-features = false }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", default-features = false }
dioxus-native-dom = { git = "https://github.com/DioxusLabs/blitz", default-features = false, features = ["system-fonts"] }
dioxus = { version = "0.7.7", features = ["macro"] }
dioxus-core = "0.7.7"
keyboard-types = "0.7"
cxx = "1.0.194"
pollster = "0.4.0"
raw-window-handle = "0.5"
vello = "0.8.0"
wgpu = "28.0.0"
crossbeam-queue = "0.3.12"
strum = "0.28.0"
strum_macros = "0.28.0"
bindgen = "0.72.1"
cxx-build = "1.0.194"
rfd = { version = "0.17.2", default-features = false }
