[workspace]
resolver = "3"
members = [
    "clap/take-my-headphones",
    "clap/neural-amp-modeler"
]

[workspace.package]
authors = ["Cristian A. Enguídanos Nebot <cristian.enguidanos.nebot@gmail.com>"]
license = "GPL-3.0"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
overflow-checks = false

[workspace.dependencies]
arc-swap = "=1.9.1"
anyrender = "=0.11.0"
anyrender_vello = "=0.11.0"
baseview = "=0.1.1"
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "7ecd70b7", features = ["custom-widget"] }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", rev = "7ecd70b7", default-features = false, features = ["custom-widget"] }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "7ecd70b7", default-features = false }
dioxus-native-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "7ecd70b7", default-features = false, features = ["system-fonts"] }
dioxus = { version = "=0.7.9", features = ["macro"] }
dioxus-core = "=0.7.9"
keyboard-types = "=0.8.3"
cxx = "=1.0.194"
pollster = "=0.4.0"
raw-window-handle = "0.5"
vello = "=0.9.0"
wgpu = "=29.0.3"
crossbeam-queue = "=0.3.12"
strum = "=0.28.0"
strum_macros = "=0.28.0"
bindgen = "=0.72.1"
cxx-build = "=1.0.194"
rfd = { version = "=0.17.2", default-features = false }

[patch.crates-io]
raw-window-metal = { git = "https://github.com/rust-windowing/raw-window-metal", branch = "fix-class-name" }
