[package]
name = "neural-amp-modeler"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-swap = { workspace = true }
anyrender = { workspace = true }
anyrender_vello = { workspace = true }
baseview = { workspace = true }
blitz-dom = { workspace = true }
blitz-paint = { workspace = true }
blitz-traits = { workspace = true }
dioxus-native-dom = { workspace = true }
dioxus = { workspace = true }
dioxus-core = { workspace = true }
keyboard-types = { workspace = true }
cxx = { workspace = true }
pollster = { workspace = true }
raw-window-handle = { workspace = true }
vello = { workspace = true }
wgpu = { workspace = true }
crossbeam-queue = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { workspace = true, default-features = false, features = ["gtk3"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { workspace = true, default-features = false }

[build-dependencies]
bindgen = { workspace = true }
cxx-build = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "=0.2.7"

[lints.clippy]
unwrap_used = "deny"
